--- a/frontend/src/components/skill-card/style.css
+++ b/frontend/src/components/skill-card/style.css
@@ -1,42 +1,56 @@
-#skills-container {
-    margin-top: 282px;
-}
-
 #skills-box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 
-    height: 230px;
-    width: 100%;
+    height: 100%;
 
     margin-top: 33px;
+    padding: 0 100px;
 
     background-color: #0C152D;
     border-radius: 1em;
 }
 
 #skills-icons {
-    margin-top: 3vh;
+    margin: 5vh 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 5em;
+    align-content: center;
 
     width: 100%;
 }
 
-#skills-box > img {
+#skills-box>img {
     filter: opacity(70%) invert(100%) sepia(0%) saturate(2%) hue-rotate(80deg) brightness(113%) contrast(101%);
     transform: rotate(180deg);
 
-    height: 50px;
+    height: 100%;
     width: 50px;
+
+    margin-bottom: 20px;
+}
+
+.icon-wrapper {
+    height: auto;
+    width: fit-content;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .skill-icon {
     filter: saturate(0) opacity(70%);
     width: 110px;
+    height: auto;
+
+    margin: 0 3em;
 }
 
 .skill-icon.react {
@@ -49,5 +63,34 @@
 
 .skill-icon:hover {
     filter: saturate(1) opacity(100%);
+}
 
+.skills-open {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5vh;
+}
+
+.skills-ope > div {
+    width: 100%;
+    margin-bottom: 5vh;
+}
+
+.skills-open h3 {
+    color: #fff;
+    font-size: 32px;
+    white-space: nowrap;
+}
+
+.skills-open .tags-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    row-gap: 2em;
+
+    white-space: nowrap;
+
+    width: 100%;
 }
